--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,4 +1,4 @@
-body{ height:3000px;}
+body{ height:3000px; background:url(../images/bg_noise.jpg);}
 .header{ width:100%; height:60px; background:url(../images/work-header.png) no-repeat; background-size:100% 60px; min-width:1000px; left:0; top:0; z-index:10; box-shadow:inset 0 0 10px #000; background-color:transparent;}
 .header_bck{ width:100%; height:60px; display:none;}
 .nav{ height:40px; padding-top:10px; position: relative;}
@@ -14,16 +14,17 @@ body{ height:3000px;}
 .top_pic{ width:100%; height:580px; min-width:1000px; position:relative; background:#e1e2dd;}
 .top_pic img{ width:100%; height:580px; display:block;} 
 .top_pic h1{ width:100%; height:50px; position:absolute; left:0; top:200px; color:#216579; text-align:center;}
-.clock{width: 160px;height: 160px;border-radius: 50%; position: absolute;right:200px; top:50px; background:url(../images/bg_noise.jpg); background-size:cover;}
+.clock{width: 160px;height: 160px;border-radius: 50%; position: absolute;right:200px; top:50px;  background-size:cover;}
 .clock div{position: absolute;left: 50%;border-radius: 100% 100% 0 0 ;-webkit-transform-origin:center bottom;}
-.hour{width:4px; height: 20px;background: #000;margin-left: -4px; top:60px; background:#300; }
-.min{width: 3px ;height: 40px; background: #000;margin-left: -3px; top: 40px; background:#330}
-.sec{width: 2px;height: 55px; background:#fff;margin-left: -2px; top: 25px;}
+.hour{width:4px; height: 20px;background:#0C0;margin-left: -4px; top:60px; }
+.min{width: 3px ;height: 40px; background:#063;margin-left: -3px; top: 40px;}
+.sec{width: 2px;height: 55px; background:#3F3;margin-left: -2px; top: 25px;}
 .needle{ width:2px; height:6px; background:#066; position:absolute;left:50%; top:0; margin-left:-2px; -webkit-transform-origin:center 80px;}
 .needle_m{ width:4px; height:8px; background:#066; position:absolute;left:50%; top:0; margin-left:-2px; -webkit-transform-origin:center 80px; font-style:normal;}
 .needle_m span{ width:12px; height:12px; top:10px; position:absolute;left:50%; margin-left:-10px; font-size:12px; text-align:center; line-height:12px; font-weight:bold; color:#d7dce4; }
 .dot{ width:8px; height:8px; background:#6b7889; border-radius:50%; position:absolute; left:50%; top:50%; margin-left:-4px;margin-top:-4px; box-shadow:0 0 10px #fff;}
- 
+.top_pic .ball{width:130px;height: 130px;position: absolute;border-radius: 50%; left:0; bottom: 0; cursor: pointer; text-align: center; background: red; z-index: 5;}
+
 .through{ width:100%; min-width:1000px; background:url(../images/bg_star.jpg);}
 .through ul{overflow:hidden;}
 .through ul li{ width:250px; height:300px; border-radius:20%; float:left; position:relative; top:0; left:0; margin:5px; background:#ccc; line-height:200px; font-size:30px; overflow:hidden; margin:30px; background-position:center;}
