--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -39,12 +39,12 @@ body{ height:3000px; background-color:transparent;}
 .through{ width:100%; min-width:1000px; background:url(../images/bg_star.jpg);}
 .through h3{ font-size:30px; color:#CCC;}
 .through ul{overflow:hidden;}
-.through ul li{ width:180px; height:240px; border-radius:20%; float:left; position:relative; top:0; left:0; margin:5px; background:#ccc; line-height:200px; overflow:hidden; margin:30px;}
-.through ul li p{ text-align:center; padding-top:10px;}
-.through ul li a{width:100%; height:100%; border-radius:20%; position:absolute; top:0; left:-250px; word-break:break-all;}
-.through ul li span{ width:100%; height:100%; font-size:20px; color:#CCC; text-align:left;} 
+.through ul li{ width:180px; height:240px; border-radius:20%; float:left; position:relative; top:0; left:0; margin:5px; overflow:hidden; margin:30px;}
+.through ul li p{ text-align:center; padding-top:100px; font-size:36px; color:#999;}
+.through ul li a{width:100%; height:100%; border-radius:20%; position:absolute; top:0; left:-180px; text-align:center; padding-top:20px;}
+.through ul li span{ width:100%; height:100%; font-size:26px; color:#CCC;} 
  
-.worklist{ width:100%; height:638px; background:url(../images/cover-04.jpg) no-repeat; background-size:100% 638px;position:relative; left:0; top:0;}
+.worklist{ width:100%; height:638px; background:url(../images/brady_01.jpg) no-repeat; background-size:100% 638px;position:relative; left:0; top:0;}
 .worklist h3{ color:#ccc; font-size:30px; padding:50px;}  
 .worklist ul{width:300px; height:200px; position:absolute; top:50%; left:50%; margin-left:-150px; margin-top:-100px; perspective:800px;}
 .worklist ul li{width:100%; height:100%; position:absolute; top:0; left:0; background:#399; text-align:center; line-height:200px; font-size:50px; opacity:0; border:1px solid #000; -webkit-transition:.5s all ease;}
@@ -56,8 +56,6 @@ body{ height:3000px; background-color:transparent;}
 .worklist ul li.cur{opacity:1; z-index:5;}
 .worklist ul li.r1{opacity:0.8; -webkit-transform:translateX(200px) rotateY(-60deg); z-index:3;}
 .worklist ul li.r2{opacity:0; -webkit-transform:translateX(250px) rotateY(-65deg); z-index:1;}
-.worklist-btn{ width:100%; height:50px; position:absolute;left:0; bottom:20px; text-align:center;} 
-.worklist-btn a{ font-size:50px; color:#fff; line-height:50px; padding:0 10px;} 
   
   
   
