--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,77 +1,493 @@
-.header{ width:100%; height:60px; background:url(../images/work-header.png) no-repeat; background-size:100% 60px; min-width:1000px; left:0; top:0; z-index:10; box-shadow:inset 0 0 10px #000; background-color:transparent;}
-.header_bck{ width:100%; height:60px; display:none;}
-.nav{ height:40px; padding-top:10px; position: relative;}
-.nav a{ width:130px; font-size:20px; height:30px; line-height:30px; float:left; text-align:center; transition:.5s all ease; color:#fff;}
-.nav a:hover{ text-shadow:0 0 15px;}
-.nav a::selection{ background:none; color:#690;}
-
-.nav span{ width:35px;height: 40px; background: url(../images/sprite-animal-ape.png) no-repeat; background-size:859px 40px; background-position: 0px 0px ;position: absolute;left: 0;top:30px; z-index:10;}
-
-.back{ width:80px; height:80px; position:fixed; right:20px; bottom:20px; display:none;}
-.back img{ width:100%; height:100%;}
-@keyframes text{
-	from{text-shadow:0 0 0 #fff; font-size:35px; color:#fff;}
-	to{text-shadow: 0 10px 10px #0F0; font-size:40px; color:#0F0;}
+.header {
+    width: 100%;
+    height: 60px;
+    background: url(../images/work-header.png) no-repeat;
+    background-size: 100% 60px;
+    min-width: 1000px;
+    left: 0;
+    top: 0;
+    z-index: 10;
+    box-shadow: inset 0 0 10px #000;
+    background-color: transparent;
 }
-.top_pic{ width:100%; height:600px; min-width:1000px; position:relative; background:#e1e2dd;}
-.top_pic img{ width:100%; height:600px; display:block;} 
-.top_pic h1{height: 40px; position:absolute; left:100px; top:400px; text-align:center;
-	animation-name:text;
-	animation-duration:3s;
-	animation-timing-function:linear;
-	animation-iteration-count:infinite;
-	animation-direction:alternate;
-	}
-.top_pic h1:hover{ animation-play-state:paused;}
-.top_pic h1::selection{color: #000;}
-.clock{width: 160px;height: 160px;border-radius: 50%; position: absolute;right:200px; top:50px;  background-size:cover;}
-.clock div{position: absolute;left: 50%;border-radius: 100% 100% 0 0 ;-webkit-transform-origin:center bottom;}
-.hour{width:4px; height: 20px;background:#0C0;margin-left: -4px; top:60px; }
-.min{width: 3px ;height: 40px; background:#063;margin-left: -3px; top: 40px;}
-.sec{width: 2px;height: 55px; background:#3F3;margin-left: -2px; top: 25px;}
-.needle{ width:2px; height:6px; background:#066; position:absolute;left:50%; top:0; margin-left:-2px; -webkit-transform-origin:center 80px;}
-.needle_m{ width:4px; height:8px; background:#066; position:absolute;left:50%; top:0; margin-left:-2px; -webkit-transform-origin:center 80px; font-style:normal;}
-.needle_m span{ width:12px; height:12px; top:10px; position:absolute;left:50%; margin-left:-10px; font-size:12px; text-align:center; line-height:12px; font-weight:bold; color:#d7dce4; }
-.dot{ width:8px; height:8px; background:#6b7889; border-radius:50%; position:absolute; left:50%; top:50%; margin-left:-4px;margin-top:-4px; box-shadow:0 0 10px #fff;}
-.top_pic .ball{width:130px;height: 130px;position: absolute;border-radius: 50%; left:0; top: 0; cursor: pointer; z-index: 5; color: #fff; font-weight: bolder; font-size:20px; line-height:130px;text-align:center;	}
-.worklist{ width:100%; height:638px; background:url(../images/1-19.jpg) no-repeat; background-size:100% 638px;position:relative; left:0; top:0;}
-.worklist h3{ color:#063; font-size:30px; padding:50px;}  
-.worklist ul{width:300px; height:200px; position:absolute; top:50%; left:50%; margin-left:-150px; margin-top:-100px; perspective:800px;}
-.worklist ul li{width:100%; height:100%; position:absolute; top:0; left:0; background:#399; text-align:center; line-height:200px; font-size:50px; opacity:0; border:1px solid #000; -webkit-transition:.5s all ease;}
-.worklist ul li a{ width:100%; height:100%;}
-.worklist ul li img{ width:100%;height:100%; border:5px solid #fff;}
-.worklist ul li p{ color:#066; font-size:20px; margin-top:-60px;}
-.worklist ul li.l2{opacity:0; -webkit-transform:translateX(-250px) rotateY(65deg); z-index:1;}
-.worklist ul li.l1{opacity:0.8; -webkit-transform:translateX(-200px) rotateY(60deg); z-index:3;}
-.worklist ul li.cur{opacity:1; z-index:5;}
-.worklist ul li.r1{opacity:0.8; -webkit-transform:translateX(200px) rotateY(-60deg); z-index:3;}
-.worklist ul li.r2{opacity:0; -webkit-transform:translateX(250px) rotateY(-65deg); z-index:1;}
 
-.through{ width:100%; min-width:1000px; background:url(../images/bg_star.jpg);}
-.through h3{ font-size:30px; color:#CCC; padding:50px 0 0 50px;}
-.through ul{overflow:hidden;}
-.through ul li{ width:180px; height:240px; border-radius:20%; float:left; position:relative; top:0; left:0; overflow:hidden; margin:30px;}
-.through ul li p{ text-align:center; padding-top:100px; font-size:36px; color:#999;}
-.through ul li a{width:100%; height:100%; border-radius:20%; position:absolute; top:0; left:-180px; text-align:center; padding-top:20px;}
-.through ul li span{ width:100%; height:100%; font-size:26px; color:#CCC;} 
-.imitate{width:100%; min-width:1000px; height:700px; background:url(../images/cover-01.jpg) no-repeat;}
-.imitate h3{  font-size:30px; color:#CCC; padding:50px 0 0 50px;}
-.imitate_page{width:400px;height:500px; position:relative; margin:0 auto; overflow:hidden;}
-.imitate_page ul{position:absolute; left:0; top:0;}
-.imitate_page ul li{width:400px;height:500px; float:left; position:relative;}
-.imitate_page ul li a{width:100%; height:100%;}
-.imitate_page ul li img{width:100%; height:500px;}
-.imitate_page ul li p{ width:100%; height:50px; text-align:center; font-size:20px; line-height:50px; color:#FC3; font-weight:bolder; background:rgba(0,102,51,0.4); position:absolute; left:0; bottom:40px;}
-.imitate_page ul li p i{ font-size:12px; color:#930}
-.imitate_page ol{position:absolute; left:50%; bottom:0; width:250px; margin-left:-90px;}
-.imitate_page ol li{width:30px; height:30px; background:#09C; float:left; margin:10px; border-radius:50%;}
-.imitate_page ol li.on{background:#0F0;}
+.header_bck {
+    width: 100%;
+    height: 60px;
+    display: none;
+}
 
-.information{ width:100%; min-width:1000px; height:700px; background:url(../images/bg_noise.jpg) repeat; position:relative;} 
-.information h3{ font-size:30px; color:#CCC; padding:50px 0 0 50px;}
-.information h3 span{ display:block; font-size:12px; color:#666; font-weight:normal; padding:10px;}
-.information_list{width: 800px;height:540px;position: absolute;left: 50%;top: 0; margin-top:70px;margin-left: -400px;background-size:contain; background: url(../images/in2.jpg) no-repeat; background-size:cover;overflow: hidden;}
-.information_list span{background:url(../images/in1.jpg);position: absolute;-webkit-transform:translate(0px,0px) rotateX(0deg) rotateY(0deg);}
+.nav {
+    height: 40px;
+    padding-top: 10px;
+    position: relative;
+}
+
+.nav a {
+    width: 130px;
+    font-size: 20px;
+    height: 30px;
+    line-height: 30px;
+    float: left;
+    text-align: center;
+    transition: .5s all ease;
+    color: #fff;
+}
+
+.nav a:hover {
+    text-shadow: 0 0 15px;
+}
+
+.nav a::selection {
+    background: none;
+    color: #690;
+}
+
+.nav span {
+    width: 35px;
+    height: 40px;
+    background: url(../images/sprite-animal-ape.png) no-repeat;
+    background-size: 859px 40px;
+    background-position: 0px 0px;
+    position: absolute;
+    left: 0;
+    top: 30px;
+    z-index: 10;
+}
+
+.back {
+    width: 80px;
+    height: 80px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    display: none;
+}
+
+.back img {
+    width: 100%;
+    height: 100%;
+}
+
+@keyframes text {
+    from {
+        text-shadow: 0 0 0 #fff;
+        font-size: 35px;
+        color: #fff;
+    }
+    to {
+        text-shadow: 0 10px 10px #0F0;
+        font-size: 40px;
+        color: #0F0;
+    }
+}
+
+.top_pic {
+    width: 100%;
+    height: 600px;
+    min-width: 1000px;
+    position: relative;
+    background: #e1e2dd;
+}
+
+.top_pic img {
+    width: 100%;
+    height: 600px;
+    display: block;
+}
+
+.top_pic h1 {
+    height: 40px;
+    position: absolute;
+    left: 100px;
+    top: 400px;
+    text-align: center;
+    animation-name: text;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+.top_pic h1:hover {
+    animation-play-state: paused;
+}
+
+.top_pic h1::selection {
+    color: #000;
+}
+
+.clock {
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    position: absolute;
+    right: 200px;
+    top: 50px;
+    background-size: cover;
+}
+
+.clock div {
+    position: absolute;
+    left: 50%;
+    border-radius: 100% 100% 0 0;
+    -webkit-transform-origin: center bottom;
+}
+
+.hour {
+    width: 4px;
+    height: 20px;
+    background: #0C0;
+    margin-left: -4px;
+    top: 60px;
+}
+
+.min {
+    width: 3px;
+    height: 40px;
+    background: #063;
+    margin-left: -3px;
+    top: 40px;
+}
+
+.sec {
+    width: 2px;
+    height: 55px;
+    background: #3F3;
+    margin-left: -2px;
+    top: 25px;
+}
+
+.needle {
+    width: 2px;
+    height: 6px;
+    background: #066;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    margin-left: -2px;
+    -webkit-transform-origin: center 80px;
+}
+
+.needle_m {
+    width: 4px;
+    height: 8px;
+    background: #066;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    margin-left: -2px;
+    -webkit-transform-origin: center 80px;
+    font-style: normal;
+}
+
+.needle_m span {
+    width: 12px;
+    height: 12px;
+    top: 10px;
+    position: absolute;
+    left: 50%;
+    margin-left: -10px;
+    font-size: 12px;
+    text-align: center;
+    line-height: 12px;
+    font-weight: bold;
+    color: #d7dce4;
+}
+
+.dot {
+    width: 8px;
+    height: 8px;
+    background: #6b7889;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -4px;
+    margin-top: -4px;
+    box-shadow: 0 0 10px #fff;
+}
+
+.top_pic .ball {
+    width: 130px;
+    height: 130px;
+    position: absolute;
+    border-radius: 50%;
+    left: 0;
+    top: 0;
+    cursor: pointer;
+    z-index: 5;
+    color: #fff;
+    font-weight: bolder;
+    font-size: 20px;
+    line-height: 130px;
+    text-align: center;
+}
+
+.worklist {
+    width: 100%;
+    height: 638px;
+    background: url(../images/1-19.jpg) no-repeat;
+    background-size: 100% 638px;
+    position: relative;
+    left: 0;
+    top: 0;
+}
+
+.worklist h3 {
+    color: #063;
+    font-size: 30px;
+    padding: 50px;
+}
+
+.worklist ul {
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -150px;
+    margin-top: -100px;
+    perspective: 800px;
+}
+
+.worklist ul li {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #399;
+    text-align: center;
+    line-height: 200px;
+    font-size: 50px;
+    opacity: 0;
+    border: 1px solid #000;
+    -webkit-transition: .5s all ease;
+}
+
+.worklist ul li a {
+    width: 100%;
+    height: 100%;
+}
+
+.worklist ul li img {
+    width: 100%;
+    height: 100%;
+    border: 5px solid #fff;
+}
+
+.worklist ul li p {
+    color: #066;
+    font-size: 20px;
+    margin-top: -60px;
+}
+
+.worklist ul li.l2 {
+    opacity: 0;
+    -webkit-transform: translateX(-250px) rotateY(65deg);
+    z-index: 1;
+}
+
+.worklist ul li.l1 {
+    opacity: 0.8;
+    -webkit-transform: translateX(-200px) rotateY(60deg);
+    z-index: 3;
+}
+
+.worklist ul li.cur {
+    opacity: 1;
+    z-index: 5;
+}
+
+.worklist ul li.r1 {
+    opacity: 0.8;
+    -webkit-transform: translateX(200px) rotateY(-60deg);
+    z-index: 3;
+}
+
+.worklist ul li.r2 {
+    opacity: 0;
+    -webkit-transform: translateX(250px) rotateY(-65deg);
+    z-index: 1;
+}
+
+.through {
+    width: 100%;
+    min-width: 1000px;
+    background: url(../images/bg_star.jpg);
+}
+
+.through h3 {
+    font-size: 30px;
+    color: #CCC;
+    padding: 50px 0 0 50px;
+}
+
+.through ul {
+    overflow: hidden;
+}
+
+.through ul li {
+    width: 180px;
+    height: 240px;
+    border-radius: 20%;
+    float: left;
+    position: relative;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    margin: 30px;
+}
+
+.through ul li p {
+    text-align: center;
+    padding-top: 100px;
+    font-size: 36px;
+    color: #999;
+}
+
+.through ul li a {
+    width: 100%;
+    height: 100%;
+    border-radius: 20%;
+    position: absolute;
+    top: 0;
+    left: -180px;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.through ul li span {
+    width: 100%;
+    height: 100%;
+    font-size: 26px;
+    color: #CCC;
+}
+
+.imitate {
+    width: 100%;
+    min-width: 1000px;
+    height: 700px;
+    background: url(../images/cover-01.jpg) no-repeat;
+}
+
+.imitate h3 {
+    font-size: 30px;
+    color: #CCC;
+    padding: 50px 0 0 50px;
+}
+
+.imitate_page {
+    width: 400px;
+    height: 500px;
+    position: relative;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.imitate_page ul {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.imitate_page ul li {
+    width: 400px;
+    height: 500px;
+    float: left;
+    position: relative;
+}
+
+.imitate_page ul li a {
+    width: 100%;
+    height: 100%;
+}
+
+.imitate_page ul li img {
+    width: 100%;
+    height: 500px;
+}
+
+.imitate_page ul li p {
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    font-size: 20px;
+    line-height: 50px;
+    color: #FC3;
+    font-weight: bolder;
+    background: rgba(0, 102, 51, 0.4);
+    position: absolute;
+    left: 0;
+    bottom: 40px;
+}
+
+.imitate_page ul li p i {
+    font-size: 12px;
+    color: #930
+}
+
+.imitate_page ol {
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    width: 250px;
+    margin-left: -90px;
+}
+
+.imitate_page ol li {
+    width: 30px;
+    height: 30px;
+    background: #09C;
+    float: left;
+    margin: 10px;
+    border-radius: 50%;
+}
+
+.imitate_page ol li.on {
+    background: #0F0;
+}
+
+.information {
+    width: 100%;
+    background: url(../images/bg_noise.jpg) repeat;
+    position: relative;
+}
+
+.information h3 {
+    font-size: 30px;
+    color: #CCC;
+    padding: 50px 0 0 50px;
+}
+
+.information h3 span {
+    display: block;
+    font-size: 12px;
+    color: #666;
+    font-weight: normal;
+    padding: 10px;
+}
+
+.information_list {
+    width: 800px;
+    height: 540px;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    margin-top: 70px;
+    margin-left: -400px;
+    background-size: contain;
+    background: url(../images/in2.jpg) no-repeat;
+    background-size: cover;
+    overflow: hidden;
+}
+
+.information_list span {
+    background: url(../images/in1.jpg);
+    position: absolute;
+    -webkit-transform: translate(0px, 0px) rotateX(0deg) rotateY(0deg);
+}
  
   
   
